# copernican

./: .gitignore  .gitignore.bak  AGENTS.md  CHANGELOG.md  Copernican.desktop  LICENSE.md  OLD_PLAN.md  PLAN.json  PLAN.md  PLAN.md.html  README.md  copernican.py  cosmo_engine.py  cosmo_engine_.1.4a.py  cosmo_engine_.1.4rc.py  cosmo_engine_1.4g.py  cosmo_model_guide.json  csv_writer.py  data_loaders.py  doc.json  documentation.md  input_aggregator.py  lcdm_model.md  lcdm_model.py  logger.py  main.py  model.json  output_manager.py  plotter.py  pyproject.toml  run.bat.txt  run_webapp.py  start.command  usmf2.json  usmf2.py  usmf3.md  usmf3.py  usmf3b.py  usmf4_qk.md  usmf4_qk.py  (+1 more)
archive/: bao-detailed-data-LCDM-vs-Fixed-Size Filament Contraction Model (USMF) Version 5-BAO-bao1_20250614_115624.csv  bao-detailed-data-LCDM-vs-LambdaCDM-BAO-bao1_20250617_014951.csv  bao-detailed-data-LCDM-vs-LambdaCDM-BAO-bao1_20250621_190001.csv  bao-detailed-data-LCDM-vs-LambdaCDM-BAO-bao1_20250705_124605.csv  bao-detailed-data-LCDM-vs-LambdaCDM-BAO-bao1_20250705_153808.csv  bao-detailed-data-LCDM-vs-USMFv2-BAO-bao1_20250617_012449.csv  bao-detailed-data-LCDM-vs-USMFv2-BAO-bao1_20250617_012816.csv  bao-detailed-data-LCDM-vs-USMFv2-BAO-bao1_20250705_164623.csv  cmb-detailed-data-LCDM-vs-LambdaCDM-CMB-Planck2018lite_20250705_103535.csv  cmb-detailed-data-LCDM-vs-LambdaCDM-CMB-Planck2018lite_20250705_115210.csv  cmb-detailed-data-LCDM-vs-LambdaCDM-CMB-Planck2018lite_20250706_013706.csv  cmb-detailed-data-LCDM-vs-USMFv2-CMB-Planck2018lite_20250705_164623.csv  copernican-run_20250614_113839.txt  copernican-run_20250617_005309.txt  copernican-run_20250617_012147.txt  copernican-run_20250617_012552.txt  copernican-run_20250617_014929.txt  copernican-run_20250621_185910.txt  copernican-run_20250705_103500.txt  copernican-run_20250705_115117.txt  copernican-run_20250705_124459.txt  copernican-run_20250705_141121.txt  copernican-run_20250705_153731.txt  copernican-run_20250705_164305.txt  copernican-run_20250705_164545.txt  copernican-run_20250706_013550.txt  sne-detailed-data-LCDM-vs-Fixed-Size-Filament-Contraction-Model-(USMF)-Version-5-SNe-unistra-fixed-nuisance-h1_20250614_115624.csv  sne-detailed-data-LCDM-vs-LambdaCDM-SNe-University-of-Strassbourg-dataset_20250705_164353.csv  (+4 more)
data/: bao1.json
(+97 files in other folders)
