[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "copernican-suite"
description = "Evaluate cosmological models using observational data."
dynamic = ["version"]
authors = [{name = "Copernican Developers"}]
license = {file = "LICENSE.md"}
requires-python = ">=3.13.1"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "sympy",
    "jsonschema",
    "camb",
]

[project.scripts]
copernican = "copernican:main_workflow"

[tool.setuptools]
packages = ["scripts", "engines"]
py-modules = ["copernican"]


[tool.setuptools_scm]
version_scheme = "no-guess-dev"
